2012-02-02 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-menubar.c (on_open_context_menu): Manages if event is
	NULL.

	* src/nact/nact-tree-view.c: Manages to open the context menu with
	keyboard.

	* src/core/na-iprefs.c: Fix enumeration maps as it only works for data
	greater than zero.

	* src/nact/nact-main-tab.c: No more try to open a popup menu on the
	notebook as the standard GtkNotebook already has its own popup.

	* src/nact/nact-main-window.c (on_base_initialize_gtk):
	Enable the standard GtkNotebook context menu.

	* src/nact/nact-menubar-priv.h:
	* src/nact/nact-menubar.c:
	Define a new notebook action group.
	Define new radio action entries.

	* src/nact/nact-menubar-view.c (nact_menubar_view_on_tabs_pos_changed):
	New function.

	* src/nact/nautilus-actions-config-tool.actions: Define menu actions.

2012-02-01 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-main-window.c:
	* src/nact/nact-main-window.h: New MAIN_SIGNAL_CONTEXT_MENU signal.

	* src/nact/nact-marshal.def: New closure definition.

	* src/nact/nact-tree-view.c:
	* src/nact/nact-tree-view.h: Removed TREE_SIGNAL_CONTEXT_MENU signal.

	* src/nact/nautilus-actions-config-tool.actions:
	* src/nact/nact-menubar.c: Updated accordingly.

	* src/nact/nact-main-tab.c:
	* src/nact/nact-main-tab.h (nact_main_tab_init): New function.

	* src/nact/nact-iaction-tab.c (nact_iaction_tab_init):
	* src/nact/nact-ibasenames-tab.c (nact_ibasenames_tab_init):
	* src/nact/nact-icapabilities-tab.c (nact_icapabilities_tab_init):
	* src/nact/nact-icommand-tab.c (nact_icommand_tab_init):
	* src/nact/nact-ienvironment-tab.c (nact_ienvironment_tab_init):
	* src/nact/nact-iexecution-tab.c (nact_iexecution_tab_init):
	* src/nact/nact-ifolders-tab.c (nact_ifolders_tab_init):
	* src/nact/nact-imimetypes-tab.c (nact_imimetypes_tab_init):
	* src/nact/nact-iproperties-tab.c (nact_iproperties_tab_init):
	* src/nact/nact-ischemes-tab.c (nact_ischemes_tab_init): Updated accordingly.
